--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 
 VITE_COINGECKO_BASE_URL=https://api.coingecko.com/api/v3
-VITE_COINGECKO_API_KEY=CG-ofvhr7iyTMuQux66oNBbVKMx
+# VITE_COINGECKO_API_KEY=CG-ofvhr7iyTMuQux66oNBbVKMx
 
